--- a/templates/searchitem.html
+++ b/templates/searchitem.html
@@ -13,7 +13,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="form-group">
-											<input class="form-control border-input" name="no" placeholder="Item No" type="text">
+											<input class="form-control border-input" name="keyword" placeholder="Enter Keyword" type="text">
 									</div>
 								</div>
 							</div>
